--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
         <link rel="stylesheet" href="/assets/css/base.css" />
     </head>
     <body>
-        <main id="app"></main>
+        <main id="app">
+            <div class="container">
+                <div class="main-layout">
+                    <div class="layout-top">.</div>
+                    <div class="layout-btn"></div>
+                </div>
+            </div>
+        </main>
 
         <script src="./assets/js/main.js"></script>
         <script
