--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
     <main id="app">
       <div class="container">
         <div class="main-layout">
-          <div class="layout-top">.</div>
-          <div class="layout-btn"></div>
+          <div class="layout-top"></div>
+
+          <!-- btn-NextDay and btn PreDay -->
+          <section>
+            <div class="layout-btn my-3 d-flex justify-content-center">
+              <button class="btn btn-secondary btn-pre rounded-pill mx-1">
+                Previous Day
+              </button>
+              <button class="btn btn-secondary btn-next rounded-pill mx-1">
+                Next Day
+              </button>
+            </div>
+          </section>
         </div>
       </div>
     </main>
