--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="stylesheet" href="/assets/css/base.css" />
+        <link rel="stylesheet" href="/assets/img/" />
+        <link rel="stylesheet" href="/assets/videos/" />
     </head>
     <body>
         <main id="app">
