--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                             src="./assets/videos/rain.mp4"
                             autoplay
                             loop
+                            muted
                         ></video>
                     </div>
                     <div class="layout-top">
@@ -92,6 +93,116 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="sub-table">
+                    <table class="w-100">
+                        <tr>
+                            <td class="col col-custom-table"></td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="col col-custom-table"></td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                            <td class="col col-custom-table">
+                                <p>
+                                    Tue 19 <br />
+                                    0:00 am
+                                </p>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </main>
