--- a/index.html
+++ b/index.html
@@ -109,10 +109,62 @@
                         Next Day
                     </button>
                 </div>
+
+                <!-- table -->
+                <section class="layout-table">
+                    <div class="heading-table my-4">
+                        <h1>Today's Weather in</h1>
+                    </div>
+                    <div class="main-table">
+                        <table class="table table-bordered">
+                            <tr>
+                                <th class="col col-2">
+                                    <p>Sunrise: 05:44 AM</p>
+                                    <p>Sunset: 05:58 PM</p>
+                                </th>
+                                <th class="col col-2">
+                                    <p>Moonrise: 07:21 AM</p>
+                                    <p>Moonset: 07:19 PM</p>
+                                </th>
+                                <th class="max">
+                                    <p>
+                                        Max: <br />
+                                        88P.2 °f
+                                    </p>
+                                </th>
+                                <th class="min">
+                                    <p>
+                                        Min: <br />
+                                        75.9 °f
+                                    </p>
+                                </th>
+                                <th class="avg">
+                                    <p>
+                                        Avg: <br />
+                                        80.6 °f
+                                    </p>
+                                </th>
+                                <th class="precip">
+                                    <p>
+                                        Precip: <br />
+                                        0.10 in
+                                    </p>
+                                </th>
+                                <th class="max-wind">
+                                    <p>
+                                        Max Wind: <br />
+                                        6.9 mph
+                                    </p>
+                                </th>
+                            </tr>
+                        </table>
+                    </div>
+                </section>
             </div>
         </main>
 
         <script src="./assets/js/search.js"></script>
+        <script src="./assets/js/colorTable.js"></script>
         <script src="./assets/js/main.js"></script>
 
         <script src="./assets/js/main.js"></script>
