--- a/index.html
+++ b/index.html
@@ -150,12 +150,7 @@
                                         0.10 in
                                     </p>
                                 </th>
-                                <th class="max-wind">
-                                    <p>
-                                        Max Wind: <br />
-                                        6.9 mph
-                                    </p>
-                                </th>
+                                <th class="max-wind"></th>
                             </tr>
                         </table>
                     </div>
@@ -271,38 +266,22 @@
                                     </td>
                                 </tr>
 
-                                <tr>
+                                <tr class="temp">
                                     <td class="col col-custom-table">
                                         <p>Temp</p>
                                     </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
 
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
-                                    <td class="col col-custom-table">
-                                        <p>78.0°f</p>
-                                    </td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
+                                    <td class="col col-custom-table"></td>
                                 </tr>
 
-                                <tr>
+                                <tr class="wind">
                                     <td class="col col-custom-table">
                                         <p>Wind</p>
                                     </td>
