--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 </tr>
 
                                 <tr>
-                                    <td class="col col-custom-table">
+                                    <td class="Icon-table col col-custom-table">
                                         <p>Icon</p>
                                     </td>
                                     <td class="col col-custom-table">
